# BgpFlowspecReceiver

./: Dockerfile  INSTALL.md  README.md  deploy.sh  pyproject.toml  redirectpcap.txt  redirectresult.txt  test.sh  uninstall.sh
bgpx/: __init__.py  __main__.py  api.py  capture.py  cli.py  constants.py  events.py  manager.py  rib.py  session.py
bgpx/message/: builder.py  flowspec.py  parser.py
bgpx/web/: ui.html
bgpx_rust/: Cargo.toml  pyproject.toml
bgpx_rust/src/: lib.rs
tests/: test_builder.py  test_flowspec.py  test_parser.py  test_rib.py  test_session.py
