[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "bgpx"
version = "26.174"
description = "BGP Flowspec Receiver — RFC 4271 · RFC 8955/8956 (IPv4/IPv6) · RFC 6793 (4-byte ASN)"
requires-python = ">=3.11"
dependencies = ["aiohttp>=3.9"]

[project.scripts]
bgpx = "bgpx.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
