[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "bgpx"
version = "26.176"
description = "BGP IPv4/IPv6 Unicast and FlowSpec Receiver with web UI"
requires-python = ">=3.11"
dependencies = ["aiohttp>=3.9"]

[project.scripts]
bgpx = "bgpx.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["bgpx", "bgpx.web", "bgpx.message"]

[tool.setuptools.package-data]
bgpx = ["web/*.html"]
